1.014   NOT

	- New maintainer Christopher J. Madsen
	- Palm::PDB & Palm::Raw are now distributed separately from
	  the other Palm modules
	- With permission from Andrew Arensburger & Alessandro Zummo
	  Palm-PDB is now distributed under the same terms as Perl 5

1.013   2013-08-21  Release by brian d foy <bdfoy@cpan.org>

	- Add notice that this distribution is in need of a new maintainer

1.012  2010-02-23  Release by brian d foy <bdfoy@cpan.org>

	- Promote to a full release from the latest development cycle

1.011_01  2010-01-02  Trial Release by brian d foy <bdfoy@cpan.org>

	- Palm/Datebook.pm: add support for time zone entries
	  (Tim Adye <T.J.Adye@rl.ac.uk>)

1.011  2009-08-17  Release by brian d foy <bdfoy@cpan.org>

	- Palm/Datebook.pm: add support for the newer-format Palm Calendar
	  databases (Tim Adye <T.J.Adye@rl.ac.uk>)

1.009  2007-07-30  Release by brian d foy <bdfoy@cpan.org>

	- cleaned up the pod coverage test.
	- add License and Author stuff to the distro

1.006  2007-01-15  Release by brian d foy <bdfoy@cpan.org>

	- chromatic sent me some changes living in another distro
	  (p5-Palm-1.004_000). It catches up 1.003_000 for all of the
	  changes since November 2002 listed in this file.

1.005  2007-01-13  Release by brian d foy <bdfoy@cpan.org>

	- Cleansed the dist to make it installable by CPAN tools.
	  It just needs a version without a _ in it.
	  (http://rt.cpan.org/Ticket/Display.html?id=12837)

1.004  2004-04-15  Various Authors

 The release history before version 1.006 is muddled.
 These are the changes listed, but it's not clear what was released when.

 2004-04-15 21:21  christophe

	- Palm/PDB.pm, util/pdbdump: Added some logic to detect broken
	databases during loading:

	- database names _must_ contain the terminating NUL within the
	first 32 characters of the header. This catches obviously broken
	situations like text files renamed to .pdb files (which, oddly
	enough, happens a lot when you're trying to process text files into